# luanext

./: .gitignore  .gitmodules  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_TRACKING.md  Cargo.toml  INTEGRATION_TEST_REVIEW.md  README.md  TODO.md  cobertura.xml  deny.toml  lcov.info  tarpaulin.toml  test_global.luax  test_narrowing_debug.tl  test_narrowing_minimal.rs  test_parse_debug.rs  test_parser.rs  test_simple_narrowing.rs
crates/luanext-cli/: Cargo.toml
crates/luanext-cli/benches/: cache_performance.rs  cross_file_performance.rs  parallel_optimization.rs
crates/luanext-cli/src/: main.rs
crates/luanext-cli/tests/: cli_edge_cases_tests.rs  cli_features_tests.rs  integration_tests.rs  lto_integration_tests.rs  lua_file_copy_tests.rs  multi_module_integration_tests.rs  template_pattern_integration_tests.rs  watch_mode_tests.rs
crates/luanext-core/: Cargo.toml
crates/luanext-core/benches/: lexer_bench.rs  parser_bench.rs  reflection_bench.rs  type_checker_bench.rs
crates/luanext-core/examples/: profile_parser.rs
crates/luanext-core/src/: arena.rs  di.rs  lib.rs
crates/luanext-core/tests/: aggressive_inlining_tests.rs  analysis_integration_tests.rs  builtin_decorator_tests.rs  cache_execution_tests.rs  codegen_assert_type_tests.rs  codegen_patterns_tests.rs  codegen_reexport_tests.rs  common_subexpression_elimination_tests.rs  copy_propagation_tests.rs  dead_store_elimination_tests.rs  decorator_tests.rs  decorator_validation_tests.rs  destructuring_tests.rs  devirtualization_tests.rs  edge_cases_tests.rs  error_conditions_comprehensive.rs  error_path_tests.rs  exception_optimization_tests.rs  execution_advanced_classes_tests.rs  execution_arrow_function_tests.rs  execution_compound_assignment_tests.rs  execution_computed_property_tests.rs  execution_continue_tests.rs  execution_control_flow_tests.rs  execution_decorator_tests.rs  execution_enum_tests.rs  execution_error_handling_tests.rs  execution_getters_setters_tests.rs  execution_interface_tests.rs  execution_label_goto_tests.rs  execution_metamethod_tests.rs  execution_multi_assignment_tests.rs  execution_mutual_recursion_tests.rs  execution_namespace_tests.rs  execution_operator_overloading_tests.rs  execution_optimization_tests.rs  execution_optional_assign_tests.rs  execution_optional_chaining_tests.rs  execution_pipe_operator_tests.rs  execution_reflection_tests.rs  (+54 more)
crates/luanext-test-helpers/: Cargo.toml
crates/luanext-test-helpers/src/: compile.rs  lib.rs  lua_executor.rs  mocks.rs
crates/typedlua-core/: Cargo.toml
crates/typedlua-core/benches/: lexer_bench.rs  parser_bench.rs  reflection_bench.rs  type_checker_bench.rs
crates/typedlua-core/examples/: profile_allocations.rs
crates/typedlua-core/src/: CLAUDE.md  arena.rs  config.rs  di.rs  diagnostics.rs  lib.rs
crates/typedlua-core/tests/: access_modifiers_tests.rs  aggressive_inlining_tests.rs  bang_operator_tests.rs  builtin_decorator_tests.rs  codegen_patterns_tests.rs  dead_store_elimination_tests.rs  decorator_tests.rs  decorator_validation_tests.rs  destructuring_tests.rs  devirtualization_tests.rs  edge_cases_tests.rs  error_classes_tests.rs  error_conditions_comprehensive.rs  error_path_tests.rs  exception_handling_edge_cases.rs  exception_handling_tests.rs  exception_optimization_tests.rs  exhaustiveness_tests.rs  feature_interactions_tests.rs  final_tests.rs  function_inlining_tests.rs  generic_specialization_tests.rs  generics_advanced_tests.rs  index_signature_tests.rs  interface_default_methods_tests.rs  interface_inlining_tests.rs  interface_method_signature_tests.rs  loop_optimization_tests.rs  method_to_function_tests.rs  module_edge_cases_tests.rs  module_system_tests.rs  multi_return_tests.rs  (+36 more)
(+419 files in other folders)
