[package]
name = "luanext-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "luanext"
path = "src/main.rs"

[dependencies]
luanext-core = { path = "../luanext-core" }
luanext-parser = { git = "https://github.com/forge18/luanext-parser.git" }
luanext-typechecker = { path = "../luanext-typechecker" }
clap.workspace = true
anyhow.workspace = true
notify.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
bumpalo.workspace = true
walkdir = "2.5"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "parallel_optimization"
harness = false
