[package]
name = "luanext-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
base64.workspace = true
bincode.workspace = true
blake3.workspace = true
bumpalo.workspace = true
rustc-hash.workspace = true
bitflags.workspace = true
indexmap = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
once_cell.workspace = true
tracing.workspace = true
luanext-runtime = { path = "../luanext-runtime" }
luanext-sourcemap = { path = "../luanext-sourcemap" }
luanext-parser = { git = "https://github.com/forge18/luanext-parser.git" }
luanext-typechecker = { path = "../luanext-typechecker" }

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
tempfile.workspace = true
dhat.workspace = true
proptest.workspace = true

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "type_checker_bench"
harness = false

[[bench]]
name = "reflection_bench"
harness = false
