[package]
name = "typedlua-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
base64.workspace = true
bincode.workspace = true
blake3.workspace = true
bumpalo.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
typedlua-runtime = { path = "../typedlua-runtime" }
lua-sourcemap = { path = "../lua-sourcemap" }
typedlua-parser = { path = "../typedlua-parser" }

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
tempfile.workspace = true
dhat.workspace = true

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "type_checker_bench"
harness = false

[[bench]]
name = "reflection_bench"
harness = false
